# nes-emulator

./: .gitignore  CMakeLists.txt
cmake/: Find_SDL2.cmake
frontend/: sdl2_audio.c  sdl2_audio.h  sdl2_frontend.c  sdl2_frontend.h  sdl2_input.c  sdl2_main.c
include/: apu.h  bus.h  cartridge.h  controller.h  cpu.h  cpu_addr.h  cpu_internal.h  cpu_ops.h  cpu_table.h  debug_checks.h  ines.h  mapper.h  nes.h  nes_palette.h  ppu.h  ppu_mem.h  ppu_regs.h  test_bus.h  utils.h
include/audio/: apu_dmc.h  apu_mixer.h  apu_noise.h  apu_pulse.h  apu_triangle.h
src/: main.c
src/apu/: apu.c  apu_dmc.c  apu_mixer.c  apu_noise.c  apu_pulse.c  apu_triangle.c
src/cartridge/: cartridge.c  ines.c  mapper.c  mapper_mmc3.c  mapper_nrom.c
src/cpu/: cpu.c  cpu_addr.c  cpu_internal.c  cpu_ops.c  cpu_table.c  cpu_timing.c
src/input/: controller.c
src/memory/: bus.c
src/nes/: nes.c  rom_loader.c
src/ppu/: nes_palette.c  ppu.c  ppu_link_shims.c  ppu_mem.c  ppu_oam.c  ppu_regs.c  ppu_render.c  ppu_timing.c
tests/: CMakeLists.txt  bus_stub.c  mapper_chr_stub.c  ppu_bus_integration_test.c  run_sanity.c  sprite_smoke_test.c  test_bus.c  test_cpu_core.c  test_ppu.c  test_ppu_dma.c
tools/: build_branch_test.c  build_controller_test.c  build_controller_test2.c  build_nes.c  build_vblank_test.c
